2018-09-11 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/string.h,
	  device/lib/_memcpy.c,
	  device/lib/stm8/memcpy.s,
	  doc/sdccman.lyx,
	  src/SDCCast.c,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCopt.c,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  support/regression/tests/gcc-torture-execute-20011008-3.c,
	  support/regression/tests/gcc-torture-execute-20050826-2.c,
	  support/regression/tests/gcc-torture-execute-lto-tbaa-1.c,
	  support/regression/tests/gcc-torture-execute-pr39339.c,
	  support/regression/tests/gcc-torture-execute-pr70127.c,
	  support/regression/tests/gcc-torture-execute-struct-cpy-1.c,
	  support/regression/tests/structassign.c:
	  Support for struct / union assignment, patch by Benedikt Freisen (roybaer).

2018-09-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Minor stm8 peephole improvement.
	* src/stm8/gen.c,
	  support/regression/tests/gcc-torture-execute-991112-1.c:
	  Fix a bug in function pointer handling.

2018-09-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/cpp/Makefile.in: move current directory earlier in
	  the include file search path

2018-09-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-2807.c:
	  Fix bug #2807.

2018-08-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  .version:
	  Make default segment ordering suitable for large memory model.
	* support/regression/tests/gcc-torture-execute-func-ptr-1.c:
	  Enable test that now passes for stm8 large memory model.

2018-08-26 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pic14/*,
	  device/lib/pic16/*:
	  Regenerate files to fix bug #2806.
	* src/SDCClospre.cc:
	  Minor lospre code refactoring.

2018-08-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.h,
	  src/SDCCicode.c,
	  support/regression/tests/bug-2804.c:
	  Fix bug #2804.
	* src/stm8/peeph.def:
	  Remove redundant ret.
	* src/SDCClospre.cc: